--- a/node/funcionario/package.json
+++ b/node/funcionario/package.json
@@ -2,13 +2,15 @@
   "name": "funcionario",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "funcionario.js",
   "scripts": {
+    "start": "nodemon",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.4.0"
   }
 }
